<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/user_settings_save"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/user_save_settings"
        android:icon="@android:drawable/ic_menu_save"/>
    
    <item
        android:id="@+id/user_settings_delete"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/user_delete_settings"
        android:icon="@android:drawable/ic_menu_delete"/>
    
    <item
        android:id="@+id/user_settings_note"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/user_note_settings"
        android:icon="@android:drawable/ic_menu_send"/>

</menu>
